# Xe_Mecanum

./: CMakeLists.txt  README.md  package.xml
config/: joint_names_Xe.yaml  xe_pro.rviz
launch/: master_launch.py
meshes/: Banhsauphai.STL  Banhtraitruoc.STL  Banhtruocphai.STL  Camera.STL  Lidar.STL  Link1.STL  Link2.STL  base_link.STL
scripts/: mecanum_numpad.py
urdf/: Xe.csv  Xe.urdf
